--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,3 +10,6 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ajusta los valores según lo necesites */ 
 
 }
+.flecha{
+    color: #8d1f7b;
+}
