--- a/src/styles/Lumber.css
+++ b/src/styles/Lumber.css
@@ -13,6 +13,7 @@
     margin-top: 5rem;
     margin-bottom: 5rem;
     background: linear-gradient(135deg, #8b6ce2, #8a2be2);
+    padding-bottom: 3rem;
 }
 .pContainer{
     margin-right: 3rem;
